# Play--Framework

./: .gitignore  Framework.sln  Framework.vcproj  FrameworkDirectX.vcproj  FrameworkMySql.vcproj  FrameworkOpenAl.vcproj  FrameworkOpenGl.vcproj  License.txt  Readme.md  makefile  makefile_mysql
Framework.xcodeproj/: project.pbxproj
build_android/: AndroidManifest.xml  build.xml  build_debug.cmd  build_debug.sh  build_release.cmd  build_release.sh  clean.cmd  clean.sh
build_android/jni/: Android.mk  Application.mk  ExternalDependencies.mk.template
build_cmake/: Framework_Common.cmake
build_cmake/Framework/: CMakeLists.txt
build_cmake/FrameworkAmazon/: CMakeLists.txt
build_cmake/FrameworkHttp/: CMakeLists.txt
build_cmake/FrameworkMySql/: CMakeLists.txt
build_cmake/FrameworkOpenAl/: CMakeLists.txt
build_cmake/FrameworkOpenGl/: CMakeLists.txt
build_cmake/FrameworkSqlite/: CMakeLists.txt
build_cmake/FrameworkVulkan/: CMakeLists.txt
build_cmake/FrameworkWin32/: CMakeLists.txt
build_cmake/FrameworkWinUI/: CMakeLists.txt
build_cmake/Tests/: CMakeLists.txt
build_html5/: CMakeLists.txt  build.sh
build_ios/: ExternalDependencies.xcconfig.template  GeneralSettings.xcconfig
build_ios/Framework.xcodeproj/: project.pbxproj
build_iphone/: Config.xcconfig  GeneralSettings.xcconfig
build_iphone/Framework.xcodeproj/: project.pbxproj
build_macosx/: ExternalDependencies.xcconfig.template  GeneralSettings.xcconfig
build_macosx/Framework.xcodeproj/: project.pbxproj
build_msvc100/: Framework.sln  Framework.vcxproj  Framework.vcxproj.filters  FrameworkDirectX.vcxproj  FrameworkDirectX.vcxproj.filters  FrameworkOpenAl.vcxproj  FrameworkOpenAl.vcxproj.filters  FrameworkOpenGl.vcxproj  FrameworkOpenGl.vcxproj.filters
build_unix/: CMakeLists.txt
build_unix/Framework/: CMakeLists.txt
build_unix/FrameworkOpenGl/: CMakeLists.txt
build_uwp/: Framework.sln  Framework.vcxproj  Framework.vcxproj.filters  GeneralSettings.props  nuget.config  pch.h
build_win32/: ExternalDependencies.userprops.template  ExternalDependenciesMySql.userprops.template  ExternalDependenciesOpenAl.userprops.template  ExternalDependenciesOpenGl.userprops.template  Framework.sln  Framework.vcxproj  Framework.vcxproj.filters  FrameworkDirectX.vcxproj  FrameworkMySql.vcxproj  FrameworkMySql.vcxproj.filters  FrameworkOpenAl.vcxproj  FrameworkOpenGl.vcxproj  FrameworkOpenGl.vcxproj.filters  GeneralSettings.props  GeneralSettingsMySql.props  GeneralSettingsOpenAl.props  GeneralSettingsOpenGl.props  packages.config
build_winrt/: Framework.sln  Framework.vcxproj  Framework.vcxproj.filters  pch.h
include/: AlignedAlloc.h  BMP.h  Base64.h  BasicUnion.h  BitManip.h  BitStream.h  Bitmap.h  Breakpoint.h  Config.h  Convertible.h  Csv.h  Deflate.h  Endian.h  EndianUtils.h  Event.h  EventEx.h  EventHandler.h  FilesystemUtils.h  FlatLayout.h  GZipStream.h  GridLayout.h  HashUtils.h  HorizontalLayout.h  IosIStream.h  IosOStream.h  LayoutBase.h  LayoutBaseItem.h  LayoutObject.h  LayoutStretch.h  List.h  LzAri.h  MemStream.h  ObjCMemberFunctionPointer.h  PNG.h  PathUtils.h  PosixFileStream.h  PtrMacro.h  PtrStream.h  Semaphore.h  Signal.h  (+39 more)
include/amazon/: AmazonClient.h  AmazonS3Client.h
include/android/: AssetManager.h  AssetStream.h  ContentResolver.h  ContentStream.h  ContentUtils.h  JavaObject.h  JavaVM.h  android_content_ContentResolver.h  android_database_Cursor.h  android_net_Uri.h  android_os_ParcelFileDescriptor.h  java_security_MessageDigest.h  javax_crypto_Mac.h  javax_crypto_spec_SecretKeySpec.h
include/bitmap/: BMP.h  Bitmap.h  JPEG.h  PNG.h  TGA.h
include/directinput/: Device.h  DirectInput.h  Joystick.h  Keyboard.h  Manager.h
include/http/: AndroidHttpClient.h  AppleHttpClient.h  CurlHttpClient.h  HttpClient.h  HttpClientFactory.h  HttpServer.h  Win32HttpClient.h  java_io_InputStream.h  java_io_OutputStream.h  java_net_HttpURLConnection.h  java_net_URL.h
include/idct/: IEEE1180.h  Interface.h  TrivialC.h
include/layout/: FlatLayout.h  GridLayout.h  HorizontalLayout.h  LayoutBase.h  LayoutBaseItem.h  LayoutEngine.h  LayoutObject.h  LayoutStretch.h  VerticalLayout.h
include/math/: MathDef.h  MathOps.h  MathStringUtils.h  Matrix4.h  Plane.h  Quaternion.h  Ray.h  Sphere.h  Vector2.h  Vector3.h  Vector4.h
include/mpeg2/: CodedBlockPatternTable.h  DcSizeChrominanceTable.h  DcSizeLuminanceTable.h  DctCoefficientTable.h  DctCoefficientTable0.h  DctCoefficientTable1.h  InverseScanTable.h  MacroblockAddressIncrementTable.h  MacroblockTypeBTable.h  MacroblockTypeITable.h  MacroblockTypePTable.h  MotionCodeTable.h  QuantiserScaleTable.h  VLCTable.h
include/mysql/: AccessInfo.h  Client.h  MySqlDefs.h  Result.h
include/odbc/: Connection.h  Statement.h
include/openal/: Buffer.h  Context.h  Device.h  OpenAlDef.h  Source.h
include/opengl/: OpenGl.h  OpenGlDef.h  Program.h  Resource.h  Shader.h
include/signal/: Signal.h
include/sqlite/: SqliteAndroidAssetsVfs.h  SqliteDb.h  SqliteStatement.h
include/vulkan/: Annotations.h  Buffer.h  CommandBufferPool.h  Device.h  Image.h  Instance.h  Loader.h  ShaderModule.h  StructChain.h  StructDefs.h  Utils.h  VulkanDef.h
include/win32/: AcceleratorTableGenerator.h  Button.h  (+57 more)
src/: BMP.cpp  Base64.cpp  BitStream.cpp  Bitmap.cpp  Config.cpp  Csv.cpp  Deflate.cpp  Endian.cpp  FilesystemUtils.cpp  FlatLayout.cpp  GZipStream.cpp  GridLayout.cpp  HashUtils.cpp  HorizontalLayout.cpp  IosIStream.cpp  IosOStream.cpp  JPEG.cpp  LayoutBase.cpp  LayoutBaseItem.cpp  LayoutObject.cpp  LayoutStretch.cpp  LzAri.cpp  MemStream.cpp  PNG.cpp  PathUtils.cpp  PosixFileStream.cpp  PtrStream.cpp  Semaphore.cpp  SocketStream.cpp  StdStream.cpp  StdStreamUtils.cpp  StrPair.cpp  StrPrimitives.cpp  Stream.cpp  StreamBitStream.cpp  StringUtils.cpp  Thread.cpp  ThreadPool.cpp  ThreadUtils.cpp  Url.cpp  (+6 more)
tests/: BitManipTest.cpp  BitManipTest.h  BmpTest.cpp  BmpTest.h  Main.cpp  MathStringUtilsTest.cpp  MathStringUtilsTest.h  SignalTest.cpp  SignalTest.h  StringCastTest.cpp  StringCastTest.h  StringUtilsTest.cpp  StringUtilsTest.h  TestDefs.h  XmlTest.cpp  XmlTest.h
(+158 files in other folders)
